# uniffi-rs

./: Cargo.toml
fixtures/ext-types/custom-types/src/: lib.rs
fixtures/ext-types/custom-types2/: Cargo.toml
fixtures/ext-types/custom-types2/src/: lib.rs
fixtures/ext-types/custom-types2/tests/bindings/: test_guid.py
uniffi_bindgen/src/bindings/kotlin/templates/: Helpers.kt
